[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/door.gd" type="Script" id=1]
[ext_resource path="res://textures/defaultXOR.png" type="Texture" id=2]
[ext_resource path="res://sounds/doropn.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/dorcls.wav" type="AudioStream" id=4]
[ext_resource path="res://scripts/doorTrigger.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 2, 0.1 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 2, 4, 0.2 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 2 )
metallic_specular = 0.0
uv1_scale = Vector3( 3, 2, 2 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 2, 0.5 )

[sub_resource type="Animation" id=5]
resource_name = "blu"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("col/MeshInstance:material/0:albedo_texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[sub_resource type="Animation" id=6]
resource_name = "red"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("col/MeshInstance:material/0:albedo_texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[sub_resource type="Animation" id=7]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("col/MeshInstance:material/0:albedo_texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ null, null, null, null ]
}

[sub_resource type="Animation" id=8]
resource_name = "wht"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("col/MeshInstance:material/0:albedo_texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[sub_resource type="Animation" id=9]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("col/MeshInstance:material/0:albedo_texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[node name="door" type="Spatial"]
script = ExtResource( 1 )
Locked = true
RequiresKey = 1

[node name="col" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )

[node name="CollisionShape" type="CollisionShape" parent="col"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="col"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="open" type="AudioStreamPlayer3D" parent="col"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
stream = ExtResource( 3 )

[node name="close" type="AudioStreamPlayer3D" parent="col"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
stream = ExtResource( 4 )

[node name="trigger" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
input_ray_pickable = false
angular_damp = 1.0
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="trigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blu = SubResource( 5 )
anims/red = SubResource( 6 )
anims/setType = SubResource( 7 )
anims/wht = SubResource( 8 )
anims/ylw = SubResource( 9 )

[connection signal="body_entered" from="trigger" to="." method="_on_trigger_body_entered"]
[connection signal="body_exited" from="trigger" to="." method="_on_trigger_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
